--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,22 +2,30 @@
 @tailwind components;
 @tailwind utilities;
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 100, 21, 75;
+  --background-start-rgb: 214, 119, 20;
+  --background-end-rgb: 255, 5, 55;
+  --scrollbar-background: 0, 0, 0;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --foreground-rgb: 155, 15, 201;
+    --background-start-rgb: 117, 10, 99;
+    --background-end-hex: 18, 33, 80;
+    --scrollbar-background: 0, 0, 0;
   }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+  /* color: rgb(var(--foreground-rgb)); */
   background: linear-gradient(
       to bottom,
       transparent,
@@ -25,3 +33,40 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+.overflow-scroll::-webkit-scrollbar-thumb {
+  background-color: #fbc665;
+}
+
+.overflow-scroll::-webkit-scrollbar,
+.overflow-y-scroll::-webkit-scrollbar,
+.overflow-x-scroll::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+  border-radius: 8px;
+}
+
+@media screen and (min-width: 960px) {
+  .overflow-scroll::-webkit-scrollbar,
+  .overflow-y-scroll::-webkit-scrollbar,
+  .overflow-x-scroll::-webkit-scrollbar {
+    width: 0.5em;
+    height: 0.5em;
+    border-radius: 8px;
+  }
+}
+
+.overflow-scroll::-webkit-scrollbar-thumb,
+.overflow-y-scroll::-webkit-scrollbar-thumb,
+.overflow-x-scroll::-webkit-scrollbar-thumb {
+  background: var(--scrollbar-foreground);
+  border-radius: 8px;
+}
+
+.overflow-scroll::-webkit-scrollbar-track,
+.overflow-y-scroll::-webkit-scrollbar-track,
+.overflow-x-scroll::-webkit-scrollbar-track {
+  background: var(--scrollbar-background);
+  border-radius: 8px;
+}
+
